--- a/views/index.pug
+++ b/views/index.pug
@@ -2,4 +2,7 @@ extends layout
 
 block content
   h1= title
-  p Welcome to #{title}
+  p Welcome to Northwest Missouri State University
+  button(type="button", class="btn btn-secondary") Press Me
+  
+
