--- a/views/index.pug
+++ b/views/index.pug
@@ -3,6 +3,17 @@ extends layout
 block content
   h1= title
   p Welcome to Northwest Missouri State University
-  button(type="button", class="btn btn-secondary") Press Me
+  button(type="button", class="btn btn-secondary", onclick="doBump()") Press Me
+  div(id='bump') Bump the count 
+  script. 
+    var count = 0;
+    var bump = 1;
+    function doBump(){
+      count = bump;
+      bump ++;
+      document.getElementById("bump").innerHTML = "count " + count + " with bump " + bump;
+    }
+
+
   
 
