Details about the electricity added

--- a/views/electricity.pug
+++ b/views/electricity.pug
@@ -2,6 +2,14 @@ extends layout
 
 block content
   h1= title
+  - var results = electricity;
+  div(class="container-fluid")
+    each item in results 
+      div(class="row")
+        div(class="col-sm-2") #{item.Edistributor_Name}
+        div(class="col-sm-2") #{item.electricity_gen}
+        div(class="col-sm-2") #{item.elctricity_type}
+
   
 
 
