--- a/views/index.pug
+++ b/views/index.pug
@@ -14,6 +14,8 @@ block content
       document.getElementById("bump").innerHTML = "count " + count + " with bump " + bump;
     }
 
+a(href="/electricity") Click here to get electricity details
+
 
   
 
